add backend function to connect on database EnrollmentDB

--- a/Registration_Project/App.config
+++ b/Registration_Project/App.config
@@ -3,9 +3,9 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Registration_Project.My.MySettings.StudentRegistrationWalkinConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\Red\source\repos\Registration_Project\Registration_Project\Assets\StudentRegistrationWalkin.accdb"
-            providerName="System.Data.OleDb" />
+        <add name="EnrollmentDB"
+            connectionString="Data Source=localhost;Initial Catalog=EnrollmentDB;Integrated Security=True;"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
